--- a/cnn_model.ipynb
+++ b/cnn_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,10 @@
     "NUM_CLASSES = 5\n",
     "\n",
     "'''\n",
-    "transform = transforms.Compose(\n",
+    "transform_image = transforms.Compose(\n",
     "    [\n",
-    "        transforms.Resize((480, 480), interpolation=transforms.InterpolationMode.BICUBIC),\n",
+    "        transforms.Resize((512, 512), interpolation=transforms.InterpolationMode.BICUBIC),\n",
+    "        transforms.CenterCrop((480, 480)),\n",
     "        transforms.ToTensor(),\n",
     "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
     "    ]\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +99,11 @@
     "        num_classes (int): Number of classes\n",
     "        dropout (float): Dropout rate\n",
     "    \"\"\"\n",
-    "    def __init__(self, metadata_features, dropout=0.2):\n",
+    "    def __init__(self, metadata_embed = None, dropout=0.2):\n",
     "        super(CNN, self).__init__()\n",
     "        # EfficientNetV2 base\n",
     "        # self.pretrained_cnn = models.efficientnet_v2_s(weights='DEFAULT')\n",
-    "        # in_features = self.pretrained_cnn.classifier[1].in_features\n",
+    "        # cnn_out = self.pretrained_cnn.classifier[1].in_features\n",
     "        # self.pretrained_cnn = nn.Sequential(*list(self.pretrained_cnn.children())[:-1])\n",
     "        \n",
     "        # ResNet50 base\n",
@@ -110,10 +111,15 @@
     "        cnn_out = self.pretrained_cnn.fc.in_features\n",
     "        self.pretrained_cnn = nn.Sequential(*list(self.pretrained_cnn.children())[:-1])\n",
     "        \n",
-    "        fc_in = cnn_out + metadata_features\n",
-    "        fc_embed = cnn_out//2\n",
-    "        fc_out = cnn_out//4\n",
+    "        fc_in = cnn_out\n",
     "        \n",
+    "        if metadata_embed is not None:\n",
+    "            self.lin = nn.Linear(1, metadata_embed)\n",
+    "            fc_in += metadata_embed\n",
+    "        \n",
+    "        fc_embed = fc_in//2\n",
+    "        fc_out = fc_embed//2\n",
+    "            \n",
     "        # Add fully connected layers\n",
     "        self.fc = nn.Sequential(\n",
     "            nn.Linear(fc_in, fc_embed),\n",
@@ -128,7 +134,7 @@
     "        self.classifier = nn.Linear(fc_out, NUM_CLASSES)\n",
     "        \n",
     "        \n",
-    "    def forward(self, img, met):\n",
+    "    def forward(self, img, met=None):\n",
     "        \"\"\"EfficientNetV2 forward pass\n",
     "        \n",
     "        Args:\n",
@@ -142,8 +148,14 @@
     "        \n",
     "        img_features = img_features.view(img_features.size(0), -1)          # (batch_size, cnn_out)\n",
     "        \n",
-    "        features = torch.cat((img_features, met.unsqueeze(dim=1)), dim=1)   # (batch_size, cnn_out+metadata_features)\n",
-    "\n",
+    "        \n",
+    "        if met is not None:\n",
+    "            met_features = self.lin(met.unsqueeze(dim=1))\n",
+    "            features = torch.cat((img_features, met_features), dim=1)   # (batch_size, cnn_out+metadata_features)\n",
+    "        else:\n",
+    "            features = img_features\n",
+    "            \n",
+    "        \n",
     "        features = self.fc(features)\n",
     "                \n",
     "        logits = self.classifier(features)\n",
@@ -153,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +204,7 @@
     "    def __init__(self, df, image_transform=None):\n",
     "        self.df = df\n",
     "        self.uids = self.df['uid'].to_numpy()\n",
-    "        self.temps = self.df['temperature'].to_numpy(dtype=np.float32)\n",
+    "        # self.temps = self.df['temperature'].to_numpy(dtype=np.float32)\n",
     "        self.targets = self.df['severity'].to_numpy()\n",
     "\n",
     "        self.image_transform = image_transform\n",
@@ -207,12 +219,12 @@
     "        if self.image_transform is not None:\n",
     "            image = self.image_transform(image)\n",
     "                    \n",
-    "        return self.uids[index], image, self.temps[index], self.targets[index] # returns (uid, image, target/severity)"
+    "        return self.uids[index], image, self.targets[index] # returns (uid, image, target/severity)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,12 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data from csv files\n",
-    "metadata = pd.read_csv(DATA_DIR / 'saved-metadata.csv')\n",
+    "metadata = pd.read_csv(DATA_DIR / 'c20p-metadata.csv')\n",
     "metadata.date = pd.to_datetime(metadata.date)\n",
     "\n",
     "train_labels = pd.read_csv(DATA_DIR / 'train_labels.csv')\n",
@@ -258,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,24 +295,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get entire train set from metadata file\n",
     "train_full = train_labels.merge(\n",
-    "    metadata_temp,\n",
+    "    metadata,\n",
     "    how='inner',\n",
     "    left_on='uid',\n",
     "    right_on='uid',\n",
     "    validate='1:1',\n",
     ")\n",
-    "train_full = train_full[['uid', 'temperature', 'severity']]"
+    "train_full = train_full[['uid', 'severity']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,21 +335,21 @@
     "    right_on='uid',\n",
     "    validate='1:1',\n",
     ")\n",
-    "test = test[['uid', 'temperature', 'region', 'severity']]"
+    "test = test[['uid', 'region', 'severity']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8718, 2180, 3726)"
+       "(11207, 2802, 4258)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,15 +368,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hyperparameters\n",
-    "learning_rate = 3e-4\n",
-    "dropout = 0.2\n",
+    "learning_rate = 1e-4\n",
+    "dropout = 0.3\n",
     "\n",
-    "batch_size = 8\n",
+    "batch_size = 64\n",
     "num_workers = 0\n",
     "\n",
     "num_epochs = 10\n",
@@ -373,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,12 +397,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create model object\n",
-    "model = CNN(metadata_features=1, dropout=dropout).to(device)\n",
+    "model = CNN(dropout=dropout).to(device)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss(reduction='mean').to(device)\n",
     "\n",
@@ -399,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,14 +449,17 @@
     "    avg_train_loss = 0\n",
     "    pbar_train = tqdm(train_loader, total=len(train_loader), leave=False)\n",
     "    model.train()\n",
-    "    for idx, (uids, imgs, temperatures, targets) in enumerate(pbar_train):\n",
+    "    for idx, (uids, imgs, targets) in enumerate(pbar_train):\n",
     "        # Move data to device\n",
     "        imgs = imgs.to(device)\n",
-    "        temperatures = temperatures.to(device)\n",
+    "        # temperatures = temperatures.to(device)\n",
     "        targets = targets.to(device)\n",
     "        \n",
     "        # Forward pass   \n",
-    "        outputs = model(imgs, temperatures)\n",
+    "        outputs = model(\n",
+    "            imgs, \n",
+    "            # temperatures,\n",
+    "        )\n",
     "        loss = criterion(outputs, targets)\n",
     "        #rmse = RMSELoss(outputs, targets)\n",
     "        \n",
@@ -471,14 +486,17 @@
     "    pbar_val = tqdm(val_loader, total=len(val_loader), leave=True)\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        for idx, (uid, imgs, temperatures, targets) in enumerate(pbar_val):\n",
+    "        for idx, (uid, imgs, targets) in enumerate(pbar_val):\n",
     "            # Move data to device\n",
     "            imgs = imgs.to(device)\n",
-    "            temperatures = temperatures.to(device)\n",
+    "            # temperatures = temperatures.to(device)\n",
     "            targets = targets.to(device)\n",
     "            \n",
     "            # Forward pass\n",
-    "            outputs = model(imgs, temperatures)\n",
+    "            outputs = model(\n",
+    "                imgs,\n",
+    "                # temperatures,\n",
+    "            )\n",
     "            loss = criterion(outputs, targets)\n",
     "            \n",
     "            # Update progress bar\n",
@@ -523,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -532,13 +550,13 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = CNN().to(device)\n",
+    "model = CNN().to(device) # metadata_embed=256\n",
     "\n",
     "model_pth = MODEL_DIR / 'checkpoint.pt'\n",
     "model.load_state_dict(torch.load(model_pth))\n"
@@ -546,14 +564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4275/4275 [01:16<00:00, 55.84it/s]\n"
+      "100%|██████████| 4258/4258 [01:18<00:00, 53.91it/s]\n"
      ]
     }
    ],
@@ -564,12 +582,15 @@
     "\n",
     "model.eval()\n",
     "pbar = tqdm(test_loader, total=len(test_loader), leave=True)\n",
-    "for idx, (uid, img, temperature,  _) in enumerate(pbar):\n",
+    "for idx, (uid, img,  _) in enumerate(pbar):\n",
     "    uid = uid[0]\n",
-    "    temperature = temperature.to(device)\n",
+    "    # temperature = temperature.to(device)\n",
     "    img = img.to(device)\n",
     "    \n",
-    "    output = model(img, temperatures)\n",
+    "    output = model(\n",
+    "        img,\n",
+    "        # temperature,\n",
+    "    )\n",
     "    \n",
     "    prediction = torch.argmax(F.softmax(output, dim=1), dim=1)\n",
     "    \n",
@@ -578,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +633,7 @@
        "      <th>0</th>\n",
        "      <td>aabn</td>\n",
        "      <td>west</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -681,7 +702,7 @@
       ],
       "text/plain": [
        "       uid     region  severity\n",
-       "0     aabn       west         4\n",
+       "0     aabn       west         1\n",
        "1     aair       west         1\n",
        "2     aajw  northeast         1\n",
        "3     aalr    midwest         1\n",
@@ -696,7 +717,7 @@
        "[6510 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,20 +728,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    4640\n",
-       "2       3\n",
-       "3     549\n",
-       "4    1318\n",
+       "1    4747\n",
+       "2      35\n",
+       "3     473\n",
+       "4    1255\n",
        "Name: severity, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,20 +752,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    4158\n",
-       "2     439\n",
-       "3     440\n",
-       "4    1473\n",
+       "1    4544\n",
+       "2     104\n",
+       "3     486\n",
+       "4    1376\n",
        "Name: severity, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,11 +776,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv(RESULTS_DIR / '2_all-cnn.csv', index=False)"
+    "submission.to_csv(RESULTS_DIR / '5_notemp-cnn.csv', index=False)"
    ]
   },
   {
