--- a/download_images.ipynb
+++ b/download_images.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,20 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR = Path.cwd() / 'data'\n",
     "\n",
-    "#IMAGE_DIR = DATA_DIR / 'images'\n",
-    "IMAGE_DIR = DATA_DIR / 'sentinel-images'\n",
+    "IMAGE_DIR = DATA_DIR / 'images'\n",
+    "#IMAGE_DIR = DATA_DIR / 'sentinel-images'\n",
     "IMAGE_DIR.mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "4  aaff  38.049471  -99.827001 2019-07-23  train"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "Name: split, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "Name: split, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23570/23570 [2:41:10<00:00,  2.44it/s]   \n"
+      "100%|██████████| 23570/23570 [48:33<00:00,  8.09it/s]   \n"
      ]
     }
    ],
@@ -440,13 +440,13 @@
     "            search_results = catalog.search(\n",
     "                collections=[\n",
     "                    \"sentinel-2-l2a\", \n",
-    "                    #\"landsat-c2-l2\",\n",
+    "                    \"landsat-c2-l2\",\n",
     "                ],\n",
     "                bbox=search_bbox,\n",
     "                datetime=search_date_range,\n",
     "                query={\n",
-    "                    \"eo:cloud_cover\": {\"lt\": 10},\n",
-    "                    #\"platform\": {\"in\": [\"Sentinel-2A\", \"Sentinel-2B\", \"landsat-8\", \"landsat-9\"]},\n",
+    "                    \"eo:cloud_cover\": {\"lt\": 20},\n",
+    "                    \"platform\": {\"in\": [\"Sentinel-2A\", \"Sentinel-2B\", \"landsat-8\", \"landsat-9\"]},\n",
     "                }\n",
     "            )\n",
     "\n",
@@ -485,7 +485,10 @@
     "                image_array = crop_sentinel_image(best_item, save_bbox)\n",
     "            else:\n",
     "                image_array = crop_landsat_image(best_item, save_bbox)\n",
-    "                \n",
+    "            \n",
+    "            if sum(image_array.flatten()) == 0:\n",
+    "                raise Exception(\"Image is all black\")\n",
+    "            \n",
     "            image = Image.fromarray(np.transpose(image_array, axes=[1, 2, 0]))\n",
     "            image.save(image_pth)\n",
     "            \n",
@@ -498,16 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18"
+       "17094"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,20 +521,314 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not pull satellite imagery for 2 samples\n"
+      "Could not pull satellite imagery for 6476 samples\n"
      ]
     }
    ],
    "source": [
     "# see how many ran into errors\n",
     "print(f\"Could not pull satellite imagery for {len(errored_ids)} samples\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Determine what image files were saved"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgs = os.listdir(IMAGE_DIR)\n",
+    "imgs.remove('.DS_Store')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(imgs, columns=['uid'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['uid'] = df['uid'].apply(lambda x: x.replace('.png', ''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saved = df.merge(\n",
+    "    metadata,\n",
+    "    how='left',\n",
+    "    left_on='uid',\n",
+    "    right_on='uid',\n",
+    "    validate='1:1'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17118\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uid</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>date</th>\n",
+       "      <th>split</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>xlix</td>\n",
+       "      <td>35.070000</td>\n",
+       "      <td>-78.887880</td>\n",
+       "      <td>2018-08-06</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>wadh</td>\n",
+       "      <td>40.025833</td>\n",
+       "      <td>-85.307944</td>\n",
+       "      <td>2021-07-20</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>yzss</td>\n",
+       "      <td>34.406900</td>\n",
+       "      <td>-119.517000</td>\n",
+       "      <td>2017-09-28</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>vypp</td>\n",
+       "      <td>40.969888</td>\n",
+       "      <td>-80.369248</td>\n",
+       "      <td>2019-07-11</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>zjkd</td>\n",
+       "      <td>36.030000</td>\n",
+       "      <td>-78.688036</td>\n",
+       "      <td>2020-09-16</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    uid   latitude   longitude       date  split\n",
+       "0  xlix  35.070000  -78.887880 2018-08-06   test\n",
+       "1  wadh  40.025833  -85.307944 2021-07-20   test\n",
+       "2  yzss  34.406900 -119.517000 2017-09-28   test\n",
+       "3  vypp  40.969888  -80.369248 2019-07-11   test\n",
+       "4  zjkd  36.030000  -78.688036 2020-09-16  train"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(len(saved))\n",
+    "saved.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saved.to_csv(DATA_DIR / 'c20p-metadata.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "train    12819\n",
+       "test      4275\n",
+       "Name: split, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saved.split.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "train    17060\n",
+       "test      6510\n",
+       "Name: split, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadata.split.value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove all black image files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im = Image.open(IMAGE_DIR / 'kmcg.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23536/23536 [02:30<00:00, 156.69it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "black_pngs = []\n",
+    "for i in tqdm(imgs):\n",
+    "    im = Image.open(IMAGE_DIR / i)\n",
+    "    im_arr = np.array(im)\n",
+    "    if sum(im_arr.flatten()) == 0:\n",
+    "        black_pngs.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6896"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(black_pngs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6896/6896 [00:01<00:00, 4751.22it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in tqdm(black_pngs):\n",
+    "    os.remove(IMAGE_DIR / i)"
    ]
   }
  ],
