--- a/make-predictions.ipynb
+++ b/make-predictions.ipynb
@@ -169,21 +169,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def RMSELoss(y_features, y_targets):\n",
-    "    \"\"\"RMSE Loss\n",
+    "# def RMSELoss(y_features, y_targets):\n",
+    "#     \"\"\"RMSE Loss\n",
     "    \n",
-    "    Args:\n",
-    "        y_features (torch.Tensor): Model features\n",
-    "        y_targets (torch.Tensor): Target labels\n",
+    "#     Args:\n",
+    "#         y_features (torch.Tensor): Model features\n",
+    "#         y_targets (torch.Tensor): Target labels\n",
     "        \n",
-    "    Returns:\n",
-    "        loss (torch.Tensor): Loss value\n",
-    "    \"\"\"\n",
-    "    y_preds = torch.argmax(F.softmax(y_features, dim=1), dim=1)\n",
+    "#     Returns:\n",
+    "#         loss (torch.Tensor): Loss value\n",
+    "#     \"\"\"\n",
+    "#     y_preds = torch.argmax(F.softmax(y_features, dim=1), dim=1)\n",
     "    \n",
-    "    loss = torch.sqrt(F.mse_loss(y_preds, y_targets))\n",
+    "#     loss = torch.sqrt(F.mse_loss(y_preds, y_targets))\n",
     "    \n",
-    "    return loss"
+    "#     return loss"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "outputs": [],
    "source": [
     "# Hyperparameters\n",
-    "learning_rate = 1e-4\n",
+    "learning_rate = 1e-5\n",
     "dropout = 0.3\n",
     "\n",
     "batch_size = 64\n",
