Add file descriptions

--- a/make-predictions.ipynb
+++ b/make-predictions.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "In this notebook we make predictions on the severity of a harmful algal bloom based on Landsat and Sentinel satellite imagery\n",
+    "\n",
+    "Inputs:\n",
+    "    Satellite Image (preferably sentinel, but if not available, landsat)\n",
+    "    Temperature Data (hrrr)\n",
+    "    \n",
+    "Outputs:\n",
+    "    Severyty of Harmful Algal Bloom on a scale of 1-5 (1 being the least severe, 5 being the most severe)\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
