--- a/get-satellite-images.ipynb
+++ b/get-satellite-images.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Download satellite imagery using Microsoft Planetary Computer API\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
